--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "AlbertAndras-ingatlancom",
-  "version": "0.1.0",
+  "name": "albert_andras-ingatlancom",
+  "version": "0.1.1",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -8,8 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.25.0",
+    "axios-auth-refresh": "^3.2.1",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons-vue": "^1.8.1",
     "core-js": "^3.8.3",
+    "lodash": "^4.17.21",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
